--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     position: relative;
-    background: url("https://colourlex.com/wp-content/uploads/2021/02/Emerald-green-painted-swatch-300x300.jpg");
+    background: url("https://images.unsplash.com/photo-1494386346843-e12284507169?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZG9uYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
 }
 
 nav {
